# ffttic-nxdtext

./: .rustfmt.toml  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/ffttic-nxdtext-cli/: Cargo.toml  cli.rs  error.rs  export.rs  import.rs  main.rs
src/ffttic-nxdtext-core/: Cargo.toml  binary.rs  error.rs  lib.rs  nxd.rs  nxd_tables.rs
