[package]
name = "ffttic-nxdtext-cli"
version = "1.0.0"
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "ffttic-nxdtext"
path = "main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "error-context", "help", "std", "usage"], default-features = false }
ffttic-nxdtext-core = { path = "../ffttic-nxdtext-core" }
polib = "0.2.0"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
