[package]
name = "ffttic-nxdtext-core"
version = "1.0.0"
authors.workspace = true
description.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "lib.rs"

[dependencies]
byteorder = "1"
phf = { version = "0.13", features = ["macros"] }
